Make a few style changes, add first post

--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ disqusShortname = ""
 	readMore = ""
 	copyright = ""
 	# Sharing options and author information in posts
-	aboutAuthor = "I'm an blogger."
+	aboutAuthor = "Staving off boredom one side project at a time"
 	tweet = ""
 	share = ""
 	# 404 page
